[gd_scene load_steps=27 format=2]

[ext_resource path="res://Components/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Dice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/tiles.png" type="Texture" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://Components/HighlitedJUMP.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/HighlitedDICE.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=8]

[sub_resource type="TileSet" id=40]
0/name = "bg.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 360, 360 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 32, 32, 0, 32, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 32, 32, 0, 32, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 32, 32, 0, 32, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 8, 32, 0, 32, 0, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 8, 16, 0, 16, 0, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 32, 32, 24, 32, 24, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 16, 24, 16, 24, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 8, 32, 8, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 32, 32, 0, 32, 0, 16, 32, 16 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=23]
0/name = "tiles.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 510, Vector2( 0, 3 ), 255, Vector2( 0, 4 ), 27, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 3 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 507, Vector2( 2, 3 ), 447, Vector2( 2, 4 ), 54, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 506 ]
0/autotile/icon_coordinate = Vector2( 1, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 24 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=39]
resource_name = "highlight"
loop = true

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="BackGround" type="TileMap" parent="."]
tile_set = SubResource( 40 )
cell_size = Vector2( 360, 360 )
format = 1
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0 )

[node name="Map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = SubResource( 23 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1572906, 0, 0, -1572905, 0, 1, -1572904, 0, 1, -1572903, 0, 1, -1572902, 0, 1, -1572901, 0, 1, -1572900, 0, 1, -1572899, 0, 1, -1572898, 0, 1, -1572897, 0, 1, -1572896, 0, 1, -1572895, 0, 1, -1572894, 0, 1, -1572893, 0, 1, -1572892, 0, 1, -1572891, 0, 1, -1572890, 0, 1, -1572889, 0, 1, -1572888, 0, 1, -1572887, 0, 1, -1572886, 0, 1, -1572885, 0, 1, -1572884, 0, 1, -1572883, 0, 1, -1572882, 0, 1, -1572881, 0, 1, -1572880, 0, 1, -1572879, 0, 1, -1572878, 0, 1, -1572877, 0, 1, -1572876, 0, 1, -1572875, 0, 1, -1572874, 0, 1, -1572873, 0, 1, -1572872, 0, 1, -1572871, 0, 1, -1572870, 0, 1, -1572869, 0, 1, -1572868, 0, 1, -1572867, 0, 1, -1572866, 0, 1, -1572865, 0, 1, -1638400, 0, 1, -1638399, 0, 1, -1638398, 0, 1, -1638397, 0, 1, -1638396, 0, 1, -1638395, 0, 1, -1638394, 0, 1, -1638393, 0, 2, -1507370, 0, 65536, -1507369, 0, 65537, -1507368, 0, 65537, -1507367, 0, 65537, -1507366, 0, 196608, -1507365, 0, 196609, -1507364, 0, 196609, -1507363, 0, 196609, -1507362, 0, 196609, -1507361, 0, 196609, -1507360, 0, 196609, -1507359, 0, 196609, -1507358, 0, 196609, -1507357, 0, 196609, -1507356, 0, 196609, -1507355, 0, 196609, -1507354, 0, 196609, -1507353, 0, 196609, -1507352, 0, 196609, -1507351, 0, 196609, -1507350, 0, 196610, -1507349, 0, 196608, -1507348, 0, 196609, -1507347, 0, 196609, -1507346, 0, 196609, -1507345, 0, 196609, -1507344, 0, 196609, -1507343, 0, 196609, -1507342, 0, 196609, -1507341, 0, 196609, -1507340, 0, 196609, -1507339, 0, 196609, -1507338, 0, 196609, -1507337, 0, 196610, -1507336, 0, 65537, -1507335, 0, 65537, -1507334, 0, 65537, -1507333, 0, 196608, -1507332, 0, 196609, -1507331, 0, 196609, -1507330, 0, 196609, -1507329, 0, 196609, -1572864, 0, 196609, -1572863, 0, 196609, -1572862, 0, 196610, -1572861, 0, 65537, -1572860, 0, 65537, -1572859, 0, 65537, -1572858, 0, 65537, -1572857, 0, 65538, -1441834, 0, 65536, -1441833, 0, 65537, -1441832, 0, 196608, -1441831, 0, 196609, -1441830, 0, 262144, -1441814, 0, 262146, -1441813, 0, 262144, -1441801, 0, 262146, -1441800, 0, 196609, -1441799, 0, 196610, -1441798, 0, 196608, -1441797, 0, 262144, -1507326, 0, 262146, -1507325, 0, 196609, -1507324, 0, 196609, -1507323, 0, 196610, -1507322, 0, 65537, -1507321, 0, 65538, -1376298, 0, 65536, -1376297, 0, 196608, -1376296, 0, 262144, -1376263, 0, 262146, -1376262, 0, 262144, -1441787, 0, 262146, -1441786, 0, 196610, -1441785, 0, 65538, -1310762, 0, 65536, -1310761, 0, 65538, -1376250, 0, 65536, -1376249, 0, 65538, -1245226, 0, 65536, -1245225, 0, 65538, -1310714, 0, 65536, -1310713, 0, 65538, -1179690, 0, 65536, -1179689, 0, 131074, -1179688, 0, 2, -1245178, 0, 65536, -1245177, 0, 65538, -1114154, 0, 65536, -1114153, 0, 65537, -1114152, 0, 65538, -1114149, 0, 0, -1114148, 0, 1, -1114147, 0, 2, -1179642, 0, 65536, -1179641, 0, 65538, -1048618, 0, 65536, -1048617, 0, 65537, -1048616, 0, 131074, -1048615, 0, 1, -1048614, 0, 1, -1048613, 0, 131072, -1048612, 0, 196608, -1048611, 0, 262144, -1114106, 0, 65536, -1114105, 0, 65538, -983082, 0, 65536, -983081, 0, 65537, -983080, 0, 196608, -983079, 0, 196609, -983078, 0, 196609, -983077, 0, 196609, -983076, 0, 262144, -983065, 0, 0, -983064, 0, 2, -1048570, 0, 65536, -1048569, 0, 65538, -917546, 0, 65536, -917545, 0, 196608, -917544, 0, 262144, -917529, 0, 65536, -917528, 0, 65538, -983034, 0, 65536, -983033, 0, 65538, -852010, 0, 65536, -852009, 0, 65538, -851993, 0, 65536, -851992, 0, 65538, -917501, 0, 0, -917500, 0, 1, -917499, 0, 1, -917498, 0, 131072, -917497, 0, 65538, -786474, 0, 65536, -786473, 0, 65538, -786457, 0, 65536, -786456, 0, 131074, -786455, 0, 1, -786454, 0, 1, -786453, 0, 2, -786437, 0, 0, -786436, 0, 2, -851965, 0, 65536, -851964, 0, 65537, -851963, 0, 65537, -851962, 0, 65537, -851961, 0, 65538, -720938, 0, 65536, -720937, 0, 65538, -720923, 0, 0, -720922, 0, 1, -720921, 0, 131072, -720920, 0, 65537, -720919, 0, 65537, -720918, 0, 65537, -720917, 0, 131074, -720916, 0, 1, -720915, 0, 2, -720901, 0, 262146, -720900, 0, 262144, -786429, 0, 65536, -786428, 0, 65537, -786427, 0, 196608, -786426, 0, 196609, -786425, 0, 262144, -655402, 0, 65536, -655401, 0, 65538, -655387, 0, 262146, -655386, 0, 196609, -655385, 0, 196609, -655384, 0, 196610, -655383, 0, 65537, -655382, 0, 196608, -655381, 0, 196609, -655380, 0, 196609, -655379, 0, 262144, -720893, 0, 65536, -720892, 0, 65537, -720891, 0, 65538, -589867, 0, 0, -589866, 0, 131072, -589865, 0, 65538, -589848, 0, 262146, -589847, 0, 196609, -589846, 0, 262144, -589825, 0, 0, -655360, 0, 2, -655357, 0, 65536, -655356, 0, 65537, -655355, 0, 65538, -524331, 0, 65536, -524330, 0, 65537, -524329, 0, 65538, -524303, 0, 0, -524302, 0, 2, -524289, 0, 65536, -589824, 0, 65538, -589821, 0, 65536, -589820, 0, 65537, -589819, 0, 65538, -458795, 0, 65536, -458794, 0, 65537, -458793, 0, 65538, -458767, 0, 262146, -458766, 0, 262144, -458758, 0, 0, -458757, 0, 1, -458756, 0, 2, -458753, 0, 65536, -524288, 0, 65538, -524285, 0, 65536, -524284, 0, 196608, -524283, 0, 262144, -393259, 0, 262146, -393258, 0, 196610, -393257, 0, 65538, -393222, 0, 65536, -393221, 0, 65537, -393220, 0, 65538, -393217, 0, 65536, -458752, 0, 131074, -458751, 0, 1, -458750, 0, 1, -458749, 0, 131072, -458748, 0, 65538, -327722, 0, 65536, -327721, 0, 65538, -327686, 0, 65536, -327685, 0, 65537, -327684, 0, 65538, -327681, 0, 65536, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65538, -262186, 0, 65536, -262185, 0, 65538, -262156, 0, 0, -262155, 0, 1, -262154, 0, 2, -262151, 0, 0, -262150, 0, 131072, -262149, 0, 65537, -262148, 0, 131074, -262147, 0, 1, -262146, 0, 1, -262145, 0, 131072, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 196608, -327677, 0, 196609, -327676, 0, 262144, -196650, 0, 65536, -196649, 0, 65538, -196620, 0, 65536, -196619, 0, 65537, -196618, 0, 65538, -196615, 0, 65536, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 196608, -196611, 0, 196609, -196610, 0, 196610, -196609, 0, 65537, -262144, 0, 196608, -262143, 0, 196609, -262142, 0, 262144, -131114, 0, 65536, -131113, 0, 65538, -131085, 0, 0, -131084, 0, 131072, -131083, 0, 65537, -131082, 0, 131074, -131081, 0, 1, -131080, 0, 1, -131079, 0, 131072, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65538, -131074, 0, 262146, -131073, 0, 196609, -196608, 0, 262144, -65578, 0, 65536, -65577, 0, 65538, -65573, 0, 0, -65572, 0, 1, -65571, 0, 1, -65570, 0, 1, -65569, 0, 1, -65568, 0, 1, -65567, 0, 1, -65566, 0, 1, -65565, 0, 1, -65564, 0, 1, -65563, 0, 1, -65562, 0, 1, -65561, 0, 1, -65560, 0, 1, -65559, 0, 1, -65558, 0, 1, -65557, 0, 1, -65556, 0, 1, -65555, 0, 1, -65554, 0, 1, -65553, 0, 1, -65552, 0, 1, -65551, 0, 1, -65550, 0, 1, -65549, 0, 131072, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 0, 65537, -65544, 0, 65537, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65538, -42, 0, 65536, -41, 0, 131074, -40, 0, 1, -39, 0, 1, -38, 0, 1, -37, 0, 131072, -36, 0, 65537, -35, 0, 65537, -34, 0, 65537, -33, 0, 65537, -32, 0, 65537, -31, 0, 65537, -30, 0, 65537, -29, 0, 65537, -28, 0, 65537, -27, 0, 65537, -26, 0, 65537, -25, 0, 65537, -24, 0, 65537, -23, 0, 65537, -22, 0, 65537, -21, 0, 65537, -20, 0, 65537, -19, 0, 65537, -18, 0, 65537, -17, 0, 65537, -16, 0, 65537, -15, 0, 65537, -14, 0, 65537, -13, 0, 65537, -12, 0, 65537, -11, 0, 65537, -10, 0, 65537, -9, 0, 65537, -8, 0, 65537, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65538, 65494, 0, 65536, 65495, 0, 65537, 65496, 0, 65537, 65497, 0, 65537, 65498, 0, 65537, 65499, 0, 65537, 65500, 0, 65537, 65501, 0, 65537, 65502, 0, 65537, 65503, 0, 65537, 65504, 0, 65537, 65505, 0, 65537, 65506, 0, 65537, 65507, 0, 65537, 65508, 0, 65537, 65509, 0, 65537, 65510, 0, 65537, 65511, 0, 65537, 65512, 0, 65537, 65513, 0, 65537, 65514, 0, 65537, 65515, 0, 65537, 65516, 0, 65537, 65517, 0, 65537, 65518, 0, 65537, 65519, 0, 65537, 65520, 0, 65537, 65521, 0, 65537, 65522, 0, 65537, 65523, 0, 65537, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 196608, 65532, 0, 262144, 131030, 0, 262146, 131031, 0, 196610, 131032, 0, 65537, 131033, 0, 65537, 131034, 0, 65537, 131035, 0, 65537, 131036, 0, 65537, 131037, 0, 65537, 131038, 0, 196608, 131039, 0, 196609, 131040, 0, 196609, 131041, 0, 196609, 131042, 0, 196609, 131043, 0, 196609, 131044, 0, 196609, 131045, 0, 196609, 131046, 0, 196609, 131047, 0, 196609, 131048, 0, 196610, 131049, 0, 196608, 131050, 0, 196609, 131051, 0, 196609, 131052, 0, 196609, 131053, 0, 196609, 131054, 0, 196609, 131055, 0, 196609, 131056, 0, 196609, 131057, 0, 196609, 131058, 0, 196609, 131059, 0, 196609, 131060, 0, 196609, 131061, 0, 196609, 131062, 0, 196609, 131063, 0, 196609, 131064, 0, 196609, 131065, 0, 196609, 131066, 0, 196609, 131067, 0, 262144, 196567, 0, 262146, 196568, 0, 196609, 196569, 0, 196609, 196570, 0, 196609, 196571, 0, 196609, 196572, 0, 196609, 196573, 0, 196609, 196574, 0, 262144, 196584, 0, 262146, 196585, 0, 262144 )

[node name="Dice" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -288, -160 )

[node name="Dice2" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -96, -224 )

[node name="Dice3" parent="Map" instance=ExtResource( 2 )]
position = Vector2( 32, -288 )

[node name="Dice4" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -160, -480 )

[node name="Dice5" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -480, -352 )

[node name="Dice6" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -736, -480 )

[node name="Dice7" parent="Map" instance=ExtResource( 2 )]
position = Vector2( -1248, -608 )

[node name="Label" type="Label" parent="Map"]
margin_left = -917.0
margin_top = -182.0
margin_right = -749.0
margin_bottom = -157.0
theme = ExtResource( 4 )
text = "Press [SPACE] to "

[node name="Label3" type="Label" parent="Map"]
margin_left = -1008.0
margin_top = -240.0
margin_right = -600.0
margin_bottom = -205.0
theme = ExtResource( 4 )
text = "Press [←][→] to choose direction"

[node name="Label2" type="Label" parent="Map"]
margin_left = -326.0
margin_top = -304.0
margin_right = -112.0
margin_bottom = -269.0
theme = ExtResource( 4 )
text = "on the      to win"

[node name="HighlitedJUMP" parent="Map" instance=ExtResource( 5 )]
margin_left = -718.0
margin_top = -180.0
margin_right = -663.0
margin_bottom = -140.0

[node name="HighlitedJUMP2" parent="Map" instance=ExtResource( 5 )]
margin_left = -386.0
margin_top = -304.0
margin_right = -331.0
margin_bottom = -264.0

[node name="HighlitedDICE" parent="Map" instance=ExtResource( 6 )]
margin_left = -244.0
margin_top = -304.0
margin_right = -187.0
margin_bottom = -264.0

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -810, -71 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "highlight"
anims/highlight = SubResource( 39 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="dice_added" from="Player" to="." method="_on_Player_dice_added"]
